<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentsUI.MovieDetailFragment">


    <TextView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@id/movieBackImgCardView"
        app:layout_constraintStart_toStartOf="@id/movieBackImgCardView"
        android:layout_marginBottom="-24dp"
        android:id="@+id/movieRating"
        android:elevation="@dimen/car_ui_padding_5"
        android:layout_marginStart="300dp"
        android:textColor="@color/black"
        android:paddingTop="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text=""
        android:textAlignment="center"
        android:background="@drawable/rounded_yellow_border"/>



    <androidx.cardview.widget.CardView
        android:id="@+id/movieBackImgCardView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/movieBackImgCardView"
            app:layout_constraintStart_toStartOf="@id/movieBackImgCardView"
            android:id="@+id/backButton"
            android:text="@string/back"
            android:backgroundTint="#00000000"
            android:textColor="@color/white"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
           />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/movieBackImg"
            android:contentDescription="@string/movie_card"

            />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/movieImgCardView"
        android:layout_width="90dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="270dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="18dp"
            android:layout_margin="4dp">
            <ImageView
                android:id="@+id/movieImg"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/little_movie_card"
                />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movieImgCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/synopsis"
        android:id="@+id/synopsis"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
/>
    <ScrollView
        android:id="@+id/synopsisScroll"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@id/synopsis"
        app:layout_constraintStart_toStartOf="parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movieSynopsis"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="36dp"
        tools:text="movie"/>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/synopsisScroll"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/similarMovie"
        android:text="@string/similar_movies"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/movieTitle"
        android:text="@string/movie_title"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/movieImgCardView"
        app:layout_constraintTop_toBottomOf="@id/movieBackImgCardView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/similarMovie"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/similarMovieRecyclerVue"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>